added panel features

--- a/index.html
+++ b/index.html
@@ -172,9 +172,51 @@
 					</div><!--end col-12-->
 				</div><!--end of mycallout-->
 				<div class="row" id="featuresheading">
-
+					<div class="col-12">
+						<h2>More Features</h2>
+						<p class="lead">Corne hole sustainable retard willhumsburg new badge kitre new fat fox elias aisworth</p>
+					</div><!--end col-12-->
 				</div><!--end of featuresheading-->
+
 				<div class="row" id="features">
+					<div class="col-sm-4 feature">
+						<div class="panel">
+							<div class="panel-heading">
+								<h3 class="panel-title">Markup with HTML5</h3>
+							</div><!--end panel-heading-->
+							<img src="images/badge_html5.jpg" alt="HTML5" class="img-circle">
+
+							<p>90's authentic simple origin coffee stumpdown Pininterest.</p>
+
+							<a href="https://www.udemy.com" target="_blank" class="btn btn-warning btn-block">Learn to code HTML5</a>
+						</div><!--end panel-->
+					</div><!--end feature-->
+
+					<div class="col-sm-4 feature">
+						<div class="panel">
+							<div class="panel-heading">
+								<h3 class="panel-title">style with CSS3</h3>
+							</div><!--end panel-heading-->
+							<img src="images/badge_css3.jpg" alt="CSSS3" class="img-circle">
+
+							<p>90's authentic simple origin coffee stumpdown Pininterest.</p>
+
+							<a href="https://www.udemy.com" target="_blank" class="btn btn-danger btn-block">style it up with CSS3</a>
+						</div><!--end panel-->
+					</div><!--end feature-->
+
+					<div class="col-sm-4 feature">
+						<div class="panel">
+							<div class="panel-heading">
+								<h3 class="panel-title">Framework eith bootstrap3</h3>
+							</div><!--end panel-heading-->
+							<img src="images/badge_bootstrap.jpg" alt="Bootstrap 3" class="img-circle">
+
+							<p>90's authentic simple origin coffee stumpdown Pininterest.</p>
+
+							<a href="http://www.getbootstrap.com" target="_blank" class="btn btn-info btn-block">More Bootstrap</a>
+						</div><!--end panel-->
+					</div><!--end feature-->
 
 				</div><!--end of features-->
 				<div class="row" id="moreinfo">
