tabbable and google maps

--- a/index.html
+++ b/index.html
@@ -217,10 +217,41 @@
 							<a href="http://www.getbootstrap.com" target="_blank" class="btn btn-info btn-block">More Bootstrap</a>
 						</div><!--end panel-->
 					</div><!--end feature-->
-
 				</div><!--end of features-->
-				<div class="row" id="moreinfo">
 
+				<div class="row" id="moreinfo">
+					<div class="col-sm-6">
+						<h3>Neat tabbable content</h3>
+						<div class="tabbable">
+							<ul class="nav nav-tabs">
+								<li class="active"><a href="#tab1" data-toggle="tab">Section 1</a></li>
+								<li><a href="#tab2" data-toggle="tab">Section 2</a></li>
+							</ul>
+							<div class="tab-content">
+								<div class="tab-pane active" id="tab1">
+									<h4><span class="glyphicon glyphicon-map-marker"></span>Our Location <small>More like or favourite surf spot.</small></h4>
+
+									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1722.616229841106!2d77.99669288462975!3d30.287443238739904!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39092bc9c8d54e93%3A0x9b43746971640caf!2sISBT+Dehradun!5e0!3m2!1sen!2sin!4v1509260034834" width="100%" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+								</div><!--end tab-pane-->
+
+								<div class="tab-pane" id="tab2">
+									<h4>A left floated picture <small>Using placehold.it</small></h4>
+
+									<img src="https://placehold.it/140" class="thumbnail pull-left">
+
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+									<hr>
+
+									<a href="#myModal" role="button" class="btn btn-warning" data-toggle="modal"><span class="glyphicon glyphicon-hand-up">Click for Modal window</span></a>
+								</div><!--end tab-pane-->
+							</div><!--end tab-content-->
+						</div><!--end tabbable-->
+					</div><!--end col-sm-6-->
 				</div><!--end of moreinfo-->
 				<div class="row" id="more courses">
 
