--- a/index.html
+++ b/index.html
@@ -248,6 +248,66 @@
 									<hr>
 
 									<a href="#myModal" role="button" class="btn btn-warning" data-toggle="modal"><span class="glyphicon glyphicon-hand-up">Click for Modal window</span></a>
+
+									<div class="modal fade" id="myModal">
+											<div class="modal-dialog">
+												<div class="modal-content">
+													<div class="modal-header">
+														<button class="close" data-dismiss="modal">&times;</button>
+
+														<h4 class="modal-title">A Modal window</h4>
+													</div><!--end modal-header-->
+													<div class="modal-body">
+														<h4>Text in the Modal</h4>
+
+														<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+														<h4>Popovers in a Modal</h4>
+														<a href="#" class="btn btn-danger pop" data-toggle="popover" data-placement="top" data-original-title="You clicked it!" data-content="I knew it">Don't click this button.</a>
+
+														<h4>Tooltips in a modal</h4>
+														<a href="" data-original-title="Tooltip" rel="tooltip">This link </a>should have a tooltip and so should<a href="" data-original-title="Woohoo!!" rel="tooltip"> this link.</a>
+
+														<hr>
+
+														<p><small class="text-muted">This form doesn't do anything. Just a heads up.</small></p>
+
+														<form class="form-horizontal">
+															<div class="form-group">
+																<label class="col-lg-2 control-label" for="inputName">Name</label>
+
+																<div class="col-lg-10">
+																	<input class="form-control" id="inputName" placeholder="Name" type="text">
+																</div>
+															</div><!--end form-group-->
+
+															<div class="form-group">
+																<label class="col-lg-2 control-label" for="inputEmail">Email</label>
+
+																<div class="col-lg-10">
+																	<input class="form-control" id="inputEmail" placeholder="Email" type="email">
+																</div>
+															</div><!--end form-group-->
+
+															<div class="form-group">
+																<label class="col-lg-2 control-label" for="inputMessage">Message</label>
+
+																<div class="col-lg-10">
+																	<textarea class="form-control" id="inputMessage" placeholder="Message" rows="3"></textarea>
+
+																	<button class="btn btn-success pull-right" type="submit">Send!</button>
+																</div>
+															</div><!--end form-group-->
+														</form><!--end form-->
+													</div><!--end modal-body-->
+													<div class="modal-footer">
+														<button class="btn btn-default" data-dismiss="modal" type="button">Close</button>
+														<button type="button" class="btn btn-primary">Save changes</button>
+													</div><!--end modal-footer-->
+												</div><!--end modal-content-->
+											</div><!--end modal-dialog-->
+									</div><!--end myModal-->
+
 								</div><!--end tab-pane-->
 							</div><!--end tab-content-->
 						</div><!--end tabbable-->
