--- a/index.html
+++ b/index.html
@@ -312,6 +312,34 @@
 							</div><!--end tab-content-->
 						</div><!--end tabbable-->
 					</div><!--end col-sm-6-->
+
+					<div class="col-sm-6">
+						<h3>Some text info</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+						<h4>Basic List group</h4>
+
+						<div class="list-group">
+							<a href="#" class="list-group-item">
+								<h4 class="list-group-item-heading">Kale</h4>
+								<p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqu.</p>
+							</a>
+
+							<a href="#" class="list-group-item">
+								<h4 class="list-group-item-heading">carrot</h4>
+								<p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqu.</p>
+							</a>
+
+							<a href="#" class="list-group-item">
+								<h4 class="list-group-item-heading">lady-finger</h4>
+								<p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqu.</p>
+							</a>
+						</div><!--end list-group-->
+
+						<h4>A Small Heading</h4>
+
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					</div><!--end col-sm-6-->
 				</div><!--end of moreinfo-->
 				<div class="row" id="more courses">
 
