thumbnails and labels

--- a/index.html
+++ b/index.html
@@ -341,10 +341,47 @@
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div><!--end col-sm-6-->
 				</div><!--end of moreinfo-->
-				<div class="row" id="more courses">
 
+				<div class="row" id="more courses">
+					<div class="col-12">
+						<h3>Learn more about Web Designs</h3>
+						<div class="thumbnails row">
+							<div class="col-6">
+								<div class="thumbnail">
+									<img src="images/item_webhosting101.jpg" alt="Web hosting 101">
+
+									<div class="label label-success price"><span class="glyphicon glyphicon-tag"></span> <sup>$</sup>39</div>
+
+									<div class="caption">
+										<h3>Web Hosting 101</h3>
+
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore etdatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+										<p><a href="https://www.udemy.com/web-hosting-101/" class="btn btn-primary btn-small" target="_blank">Take course</a><a href="https://www.udemy.com/web-hosting-101/" class="btn btn-small btn-link" target="_blank">Learn More</a></p>
+									</div><!--end caption-->
+								</div><!--end thumbnail-->
+							</div><!--end col-6-->
+
+							<div class="col-6">
+								<div class="thumbnail">
+									<img src="images/item_psd2html5.jpg" alt="PSD To HTML5 & CSS3">
+
+									<div class="label label-info price"><span class="glyphicon glyphicon-tag"></span> Free</div>
+
+									<div class="caption">
+										<h3>PSD to HTML5 &amp; CSS3</h3>
+
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore etdatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+										<p><a href="https://www.udemy.com/build-beautiful-html5-website/" class="btn btn-primary btn-small" target="_blank">Take course</a><a href="https://www.udemy.com/build-beautiful-html5-website/" class="btn btn-small btn-link" target="_blank">Learn More</a></p>
+									</div><!--end caption-->
+								</div><!--end thumbnail-->
+							</div><!--end col-6-->
+						</div><!--end row-->
+					</div><!--end col-12-->
 				</div><!--end of more courses-->
 		</div><!--end of container-->
+
 		<footer>
 
 		</footer>
