--- a/index.html
+++ b/index.html
@@ -342,6 +342,8 @@
 					</div><!--end col-sm-6-->
 				</div><!--end of moreinfo-->
 
+				<hr>
+
 				<div class="row" id="more courses">
 					<div class="col-12">
 						<h3>Learn more about Web Designs</h3>
@@ -383,7 +385,41 @@
 		</div><!--end of container-->
 
 		<footer>
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-2">
+						<h6>Copyright &copy; 2017 Aditya</h6>
+					</div><!--end col-sm-2-->
 
+					<div class="col-sm-4">
+						<h6>About Us</h6>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					</div><!--end col-sm-4-->
+
+					<div class="col-sm-2">
+						<h6>Navigation</h6>
+						<ul class="unstyled">
+							<li><a href="#">Home</a></li>
+							<li><a href="#">Services</a></li>
+							<li><a href="#">Links</a></li>
+							<li><a href="#">Contact</a></li>
+						</ul>
+					</div><!--end col-sm-2-->
+
+					<div class="col-sm-2">
+						<h6>Navigation</h6>
+						<ul class="unstyled">
+							<li><a href="#">Facebook</a></li>
+							<li><a href="#">Twitter</a></li>
+							<li><a href="#">Google plus</a></li>
+						</ul>
+					</div><!--end col-sm-2-->
+
+					<div class="col-sm-2">
+						<h6>Coded with <span class="glyphicon glyphicon-heart"></span> by Aditya</h6>
+					</div><!--end col-sm-2-->
+				</div><!--end row-->
+			</div><!--end container-->
 		</footer>
 	<!-- All Javascript at the bottom of the page for faster page loading -->
 
